# Galaktyka

./: AsteroidField.cpp  AsteroidField.h  BlackHole.cpp  BlackHole.h  CMakeLists.txt  CelestialBody.cpp  CelestialBody.h  Citizen.cpp  Citizen.h  Civilization.cpp  Civilization.h  Coalition.cpp  Coalition.h  FastTravelObject.cpp  FastTravelObject.h  GalacticMarket.cpp  GalacticMarket.h  Galaktyka.rar  Galaktyka_Clion.rar  GalaxyObject.cpp  GalaxyObject.h  Galaxy_Object.cpp  Galaxy_Object.h  IsUpdatable.cpp  IsUpdatable.h  MapGenerator.cpp  MapGenerator.h  PeopleCarrier.cpp  PeopleCarrier.h  Planet.cpp  Planet.h  RandomClusterMapGenerator.cpp  RandomClusterMapGenerator.h  RandomMapGenerator.cpp  RandomMapGenerator.h  Resource.cpp  Resource.h  ResourceCarrier.cpp  ResourceCarrier.h  Soldier.cpp  (+14 more)
